# Prompt-Scribe

./: .cursorignore  .cursorrules  .gitignore  .vercelignore  A2_A1_COMPLETION_SUMMARY.md  API_OPTIMIZATION_PLANNING_COMPLETE.md  CHANGELOG.md  CURSOR_IGNORE_GUIDE.md  DATABASE_ANALYSIS_REPORT.md  DAY1_PROGRESS_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PRINCIPLES.md  Dockerfile  FINAL_DELIVERY_REPORT.md  FINAL_INTEGRATION_TEST.py  GPT5_CLIENT_IMPROVEMENTS.md  GPT5_FIXES_QUICKSTART.md  GPT5_IMPLEMENTATION_SUMMARY.md  GPT5_PROMPTING_OPTIMIZATION.md  GPT5_SCHEMA_FIX_SUMMARY.md  GPT5_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSPIRE_AGENT_FIX_COMPLETE.md  INSPIRE_AGENT_IMPLEMENTATION_COMPLETE.md  INSPIRE_INTEGRATION_STRATEGY.md  INVESTIGATION_JSON_PARSING.md  LICENSE  LINTER_WARNINGS_ANALYSIS.md  LOCAL_DEV_QUICKSTART.md  NEXT_STEPS_SUMMARY.md  OPTIMIZATION_ROADMAP.md  P0_P1_COMPLETION_REPORT.md  P1_COMPLETION_SUMMARY.md  PROJECT_CLEANUP_2025-10-22.md  PROJECT_ORGANIZATION_REPORT.md  PROJECT_QUALITY_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_DEVELOPMENT.md  (+60 more)
.github/: CICD_SETUP_GUIDE.md
.playwright-mcp/: logs-result.json
.speckit/: CDN_VS_PAAS_EXPLAINED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_LEARNINGS.md  DEPLOYMENT_OPTIMIZATION.md  DEPLOYMENT_PLAN_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_STRATEGY_GUIDE.md  EXECUTION_COMPLETE_REPORT.md  FINAL_POLISH_REPORT.md  LOCAL_DEVELOPMENT_SETUP.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_OPTIMIZATION.plan  README_POLISH_PLAN.md  SETUP_COMPLETE.md  ZEABUR_DEPLOYMENT_ANALYSIS.md  ZEABUR_SETUP_COMPLETE.md  config.yaml  constitution.md  (+3 more)
(+3921 files in other folders)
